--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+RewriteEngine On
+RewriteRule (.*) public/$1
+
+
 AddCharset UTF-8 .html
 <FilesMatch "\.(html)$">
    Header set Cache-Control: "no-cache, no-store"
