--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
-  "name": "$vendor_name$/$package_name$",
-  "description": "$description$",
-  "minimum-stability": "$stability$",
-  "license": "$license$",
-  "authors": [
-    {
-      "name": "$author$",
-      "email": "$email$"
-    }
-  ],
+"autoload": {
+  "psr-4": {
+    "wfm\\": "vendor/wfm",
+    "app\\": "app"
+  }
+},
   "require": {
-    $END$
+    
   }
 }
